--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portofolio",
+  "homepage": "https://rissss21.github.io/portofolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
