--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "GitHub-Aldy",
-  "homepage": "https://Angga2076.github.io/GitHub-Aldy-",
+  "name": "Aldy21",
   "private": true,
   "version": "0.0.0",
   "type": "module",
